--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cubesat)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(binar.exe binar.cpp bitmapRW.cpp bitmapRW.h)
-add_executable(median.exe median.cpp bitmapRW.cpp bitmapRW.h)
+add_executable(binar binar.cpp bitmapRW.cpp bitmapRW.h)
+add_executable(median median.cpp bitmapRW.cpp bitmapRW.h)
