fixed linking, separated libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(cubesat)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(binar binar.cpp bitmapRW.cpp bitmapRW.h)
-add_executable(median median.cpp bitmapRW.cpp bitmapRW.h)
-add_executable(close_open close-open.cpp bitmapRW.cpp bitmapRW.h)
+include_directories(include)
+include_directories(src)
+
+add_executable(binar binar.cpp src/bitmapRW.cpp include/bitmapRW.h)
+add_executable(median median.cpp src/bitmapRW.cpp include/bitmapRW.h include/border_checker.h)
+add_executable(close-open close-open.cpp src/bitmapRW.cpp include/bitmapRW.h include/border_checker.h)
